# libpcomn

./: .gitignore  .gitmodules  Jamroot  LICENSE  README.rst  bgraph_traits.h  dotnet_helpers.cs  maketags
pcommon/: CMakeLists.txt  CREDITS.txt  Doxyfile  FlexLexer.h  Jamroot  LICENSE  _pregex.h  allunit.sh  bmake  packpop.h  packpsh1.h  packpsh2.h  packpsh4.h  packpsh8.h  packpshn.h  pbregex.h  pccritsect.h  pcommon.h  pcomn_algorithm.h  pcomn_alloca.h  pcomn_aprintf.c  pcomn_aprintf.h  pcomn_assert.h  pcomn_atomic.h  pcomn_binary128.cpp  pcomn_binary128.h  pcomn_binascii.cpp  pcomn_binascii.h  pcomn_binstream.cpp  pcomn_binstream.h  pcomn_bitarray.h  pcomn_bitops.h  pcomn_bitvector.h  pcomn_blocqueue.cpp  pcomn_blocqueue.h  pcomn_buffer.h  pcomn_build.h  pcomn_cacher.h  pcomn_calgorithm.h  pcomn_cdsbase.h  (+171 more)
pcommon/config/: FindZSTD.cmake  Findcppunit.cmake  Findlibdw.cmake  Findlibelf.cmake  Findlibunwind.cmake  aliases.doxyfile  bisonpp.jam  boost-build.stage.patch  dotnetexe.jam  extract_token_id.py  flexpp.jam  pcommon.cmake  pcommon.jam  put_status.cmake  quex.jam  rpm.jam  swig.jam  trafficsvr.jam  wt.jam
pcommon/cppunit/extensions/: TestLogger.h
pcommon/debugger/gdb/: pcommon.py  pcommon_printers.py
pcommon/debugger/gdb/v5_0/: printers.py
pcommon/doc/: tracing.md
pcommon/gdb/pprint/: __init__.py  ppregister.py  ptr.py  utils.py
pcommon/perftests/: Jamfile.v2  perftest_cdscrq.cpp  perftest_cdsqueue.cpp  perftest_hashtable.cpp  perftest_keyedmutex1.cpp  perftest_keyedrwmutex1.cpp  perftest_locks.cpp  perftest_mutex.cpp
pcommon/platform/: dirent.h  getopt.h  getopt_long.c
pcommon/scratch/: Jamfile.v2
pcommon/swig/: pcomn_intrusive_ptr.i  pcomn_macros.swg  pcomn_operators.i  pcomn_property.swg  pcomn_tuple.i  pcomn_valtype.i
pcommon/t1ha/: t1ha.h
pcommon/t1ha/src/: README.md  t1ha0_ia32aes_avx.c  t1ha2.c  t1ha_bits.h
pcommon/tests/: CfgParserTests.TestRead.unix.eol.lst  CfgParserTests.TestReadManySections.lst  MMapTests.Test_MemMapFileWrite.lst  checktst.cpp  echo_both.sh  echo_stdout.sh  foobar.write.ini  getopt.c  subtst.cpp  test_bitarray.cpp  test_dsptr.cpp  test_epollpipe03.cpp  test_hashtable.cpp  test_journal.h  test_keyedrwmutex.cpp  test_mkjournal.cpp  test_rawstream.cpp  test_rawstream.lst  test_safeformat.cpp  test_scheduler1.cpp  test_scheduler2.cpp  test_threadlocal.cpp  test_trace.cpp  unittest_atomic_compile.cpp  unittest_exec.cpp  unittest_hashclosed.cpp  unittest_hashclosed_compfail.cpp  unittest_indicator_observer.cpp  unittest_journal.cpp  unittest_journal.h  unittest_journal_files.cpp  unittest_keyedmutex.cpp  unittest_lanes.cpp  unittest_metafunction.cpp  unittest_rawstream.cpp  unittest_simplematrix.cpp  unittest_sync.cpp  unittest_sys.cpp  unittest_textio.cpp  unittest_timespec.cpp  (+1 more)
pcommon/tests/vendor_tests/: Jamfile.v2  unittest_re2ex.cpp
pcommon/unittests/: CMakeLists.txt  CfgParserTests.TestRead.windows.eol.lst  Jamfile.v2  MMapTests.Test_MemMapFile.lst  MMapTests.Test_MemMapFileReadWrite.lst  RawStreamTests.Test_StdStream.lst  Test_Unittest_Diff.out.tst  Test_Unittest_Diff_Mismatch_Fail.out.tst  benchmark_bin128hash.cpp  benchmark_mmap.cpp  cchktst.c  checktst.cpp  echo_stderr.sh  fuzzytest_threadpool.cpp  ivecttst.cpp  pcomn_testcds.h  pcomn_testhelpers.h  pooltest1.cpp  put_status.cmake  qntest.cpp  regtest.cpp  sptr.cpp  subtst.cpp  test_backtrace.cpp  test_bitarray.cpp  test_bitarray.lst  test_bitops.cpp  test_cfgparser.cpp  test_common_type.cpp  test_crc32.cpp  test_dsptr.cpp  test_epollpipe.cpp  test_epollpipe02.cpp  test_epollpipe03.cpp  test_flgout.cpp  test_journal.h  test_keyedrwmutex.cpp  test_mappediter.cpp  test_mappediter.lst  test_mkjournal.cpp  (+105 more)
pcommon/unittests/vendor_tests/: unittest_re2ex.cpp
pcommon/unix/: mykill.c  pcomn_atomic.cc  pcomn_dlhandle.h  pcomn_exec.cpp  pcomn_exec.h  pcomn_fdevents.h  pcomn_fmemopen.c  pcomn_mmap.cc  pcomn_native_syncobj.cpp  pcomn_native_syncobj.h  pcomn_posix_exec.cpp  pcomn_shutil.cpp  pcomn_stacktrace.cpp  pcomn_sys.cpp  pcomn_sys.h  pcomn_thread.cc  pcomn_xattr.h  sdt.h  sisusptest.cpp
pcommon/utilities/: Jamfile.v2  pcomn_jrninfo.cpp  pcomn_makejrn.cpp
pcommon/win32/: pcomn_atomic.cc  pcomn_crypt.h  pcomn_exec.h  pcomn_fiber.h  pcomn_fiberlock.h  pcomn_mmap.cc  pcomn_native_syncobj.h  pcomn_nrthreadmutex.c  pcomn_nrthreadmutex.h  pcomn_sys.cpp  pcomn_sys.h  pcomn_thread.cc  pcomn_tss.h  pcomn_w32handle.h  pcomn_w32util.cpp  pcomn_w32util.h  pcomn_winfile.h
pcomn_bgraph/: bgraph_traits.h
pcomn_cmdline/: CMakeLists.txt  Config.mk  Jamfile.v2  LICENSE  MANIFEST  Overview  README  Suggestions  argiter.cpp  arglist.h  cmdarg.cpp  cmdargs.cpp  cmdargs.h  cmdext.cpp  cmdext.h  cmdline.cpp  cmdline.h  cmdtest.cpp  cmdtestext.cpp  cmdtestglob.cpp  dump.cpp  exits.h  fifolist.cpp  fifolist.h  parse.cpp  patchlevel.cpp  private.cpp  states.h  strindent.cpp  unix.cpp  usage.cpp
pcomn_cmdline/cmd/: argtypes.cpp  argtypes.h  cmdparse.cpp  cmdparse.h  cmdparse.pl  cmdparse.tcl  fsm.cpp  fsm.h  main.cpp  quoted.cpp  quoted.h  shell_arg.cpp  shell_arg.h  shells.cpp  shells.h  syntax.cpp  syntax.h
pcomn_cmdline/doc/: bugs.man  caveats.man  classes.man  cmdargs.man3  cmdline.man3  cmdparse.man1  environ.man  example.man  files.man  macros.man  parsing.man
pcomn_dotnet/: dotnet_helpers.cs  dotnet_swigwrapper.cs  dotnet_utilities.cs
pcomn_http/: Jamfile.v2  LICENSE  http_basic_server.h  http_connection.cpp  http_connection.h  http_constants.h  http_def.h  http_diag.cpp  (+4 more)
pcomn_net/: CMakeLists.txt  Jamfile.v2  netaddr.cpp  netaddr.h  netexcept.h  netsockets.cpp  netsockets.h  netstreams.h
pcomn_net/unittests/: Jamfile.v2  echoserver-stream.py  test_netstream01.cpp  unittest_netsockets.cpp  unittest_netstreams.cpp  unittest_network_address.cpp
pcomn_shell/: CMakeLists.txt  Jamfile.v2  shell_cmdarg.h  shell_cmdline.cpp  shell_cmdline.h  shell_repl.cpp  shell_repl.h
pcomn_shell/unittests/: Jamfile.v2  unittest_cmdline.cpp
pcomn_trie/: CMakeLists.txt  LICENSE  pcomn_netprefix.cpp  pcomn_netprefix.h
pcomn_trie/unittests/: CMakeLists.txt  unittest_netprefix.cpp
(+42 files in other folders)
